# Smart-Learn-Avatar

./: .gitignore  README.md
smart-learn-api/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
smart-learn-api/app/: config.py  main.py
smart-learn-api/app/api/: ota.py  routes.py  xiaozhi_ws.py
smart-learn-api/app/core/: database.py  embedding.py  ingestion.py  llm.py  ogg_utils.py  stt.py  tts.py
smart-learn-api/app/utils/: nvs_gen.py
smart-learn-api/tests/: test_api.py
smart-learn-iot/: .gitignore  README.md
smart-learn-iot/smart-learn/: CHANGES_SUMMARY.md  CMakeLists.txt  CONFIGURATION_GUIDE.md
smart-learn-iot/smart-learn/factory_nvs/: README.md
smart-learn-iot/smart-learn/main/: Kconfig.projbuild  main.c
smart-learn-iot/smart-learn/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
smart-learn-iot/smart-learn/main/ui/images/: ui_img_avatar_avatar_0_png.c  ui_img_avatar_avatar_1_png.c  ui_img_avatar_avatar_2_png.c  ui_img_avatar_avatar_3_png.c  ui_img_avatar_avatar_4_png.c  ui_img_avatar_avatar_5_png.c  ui_img_reset_icon_png.c  ui_img_settings_back_png.c  ui_img_sleep_big_z_png.c  ui_img_sleep_mode_png.c  ui_img_sleep_small_z_png.c  ui_img_speaker_speaker_0_png.c  ui_img_speaker_speaker_1_png.c  ui_img_speaker_speaker_2_png.c  ui_img_speaker_speaker_3_png.c  ui_img_speaker_speaker_4_png.c  ui_img_speaker_speaker_5_png.c
smart-learn-iot/smart-learn/main/ui/screens/: ui_ScreenListen.c  ui_ScreenReset.c  ui_ScreenSetup.c  ui_ScreenWifiReset.c
smart-learn-web/: .env.example  .gitignore  README.md  package-lock.json  package.json
smart-learn-web/src/: App.jsx  api.js  index.css
(+27 files in other folders)
